# clinicaltrial_agent

./: .gitignore  README.md  clinicaltrials.csv  pyproject.toml  report.csv  report.json  report.md  report.txt  requirements.txt  test.py
src/agent_project/: app.py  crew.py  main.py
src/agent_project/config/: agents.yaml  tasks.yaml
